# syncdir

./: .gitignore  Cargo.toml  LICENSE  README.md  architecture.md  context.md  spec.md
.ast-grep/rules/: path-traversal-leak.yml  scattered-env-var.yml  sql-injection.yml  unwrap-in-production.yml
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  monitor.rs  startup.rs  sync.rs  tray.rs
tests/: integration_tests.rs
