[package]
name = "syncdir"
version = "0.1.0"
edition = "2024"
description = "A lightweight Windows user-session background sync utility with block-level delta synchronization."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
blake3 = "1.5"
notify = "6.1.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tray-icon = "0.14"
winit = { version = "0.29", features = ["rwh_05"] }
winreg = "0.56"

[dev-dependencies]
tempfile = "3.8"
